# open-thrift-finance

./: .gitignore  Makefile  README.md  flake.nix  offchain-cabal.project  onchain-cabal.project  setup.sh
common/: thrift-finance-common.cabal
common/src/ThriftFinance/Common/: Constants.hs  Types.hs
common/src/ThriftFinance/Common/Types/: Ada.hs
docs/: 00-Design.md  01-components-specification.lagda.md
offchain/: .envrc  thrift-finance-offchain.cabal
offchain/compiled/: ConstTrueValidator.plutus  OtherConstTrueValidator.plutus  TfTokenMp.plutus  TfValidator.plutus  TrivialRewardToken.plutus  TrivialToken.plutus
offchain/src/Contract/: Utils.hs
offchain/src/Scripts/V1/: Deserialize.hs
offchain/src/ThriftFinance/Offchain/: Check.hs  Error.hs  TFContract.hs  Utils.hs
offchain/src/ThriftFinance/Offchain/Contracts/: Cancel.hs  Initialise.hs  Return.hs  Submit.hs  Trigger.hs  TrivialProtocol.hs
offchain/test/: Spec.hs
offchain/test/Spec/: Plutip.hs
offchain/test/Spec/Plutip/: Common.hs
offchain/test/Spec/Tests/: Cancel.hs  Initialise.hs  MVP.hs  Return.hs  Submit.hs  Trigger.hs  TrivialProtocol.hs
onchain/: .envrc  thrift-finance.cabal
onchain/app/: Main.hs
onchain/src/: ThriftFinance.hs
onchain/src/ThriftFinance/: Config.hs  Types.hs  Utils.hs
onchain/src/ThriftFinance/Plutarch/: Api.hs  AssocMap.hs  Bool.hs  List.hs  Patterns.hs  TermCont.hs  Value.hs
onchain/src/ThriftFinance/Plutarch/Scripts/: V1.hs
onchain/src/ThriftFinance/Script/: Types.hs  Validator.hs
onchain/src/ThriftFinance/Token/: MintingPolicy.hs  Types.hs
onchain/src/ThriftFinance/TrivialProtocol/: RewardToken.hs  Token.hs  Types.hs  Validator.hs
onchain/test/: Spec.hs
onchain/test/Test/: ThriftFinance.hs
