cabal-version: 3.0
name:          thrift-finance-common
version:       0.0.1
synopsis:      TODO
description:   TODO
license:
license-file:
author:        MLabs
maintainer:    TODO
copyright:     TODO
category:      TODO
build-type:    Simple

flag dev
  description: Enable lean development
  default:     False
  manual:      True

flag new-ledger-namespace
  description: Use the new plutus-ledger-api namespace (post 0a8b1ad)
  manual:      False
  default:     True

-- Common sections

common common-configs
  default-language: Haskell2010

  if flag(new-ledger-namespace)
    cpp-options: -DNEW_LEDGER_NAMESPACE

common common-ghc-opts
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wredundant-constraints
    -Wmissing-home-modules -Wmissing-export-lists -fwarn-unused-imports
    -Wno-unticked-promoted-constructors

  if !flag(dev)
    ghc-options: -Werror

common common-deps
  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-crypto
    , containers
    , cryptonite
    , directory
    , filepath
    , memory
    , mtl
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , ply-core
    , pretty-show
    , prettyprinter
    , serialise
    , text

common common-lang
  default-extensions:
    BangPatterns
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    NumericUnderscores
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances

-- Build targets

library
  import:          common-lang
  import:          common-configs
  import:          common-deps
  import:          common-ghc-opts
  exposed-modules:
    ThriftFinance.Common.Constants
    ThriftFinance.Common.Types
    ThriftFinance.Common.Types.Ada

  hs-source-dirs:  src
